tests/diagnostics/catalog/snapshots/ir/IR0057.snap
error[IR0057]: IR_E_TYPE_MISMATCH
 --> tests/diagnostics/catalog/sources/ir/IR0057.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0057
  = help: keep IR validation diagnostics structured and catalog-backed
